--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -48,7 +48,7 @@ persistent_binderhub:
           - ^https%3A%2F%2Fbitbucket.org%2Fnikiubel%2Fnikiubel.bitbucket.io.git/.*
           - ^https%3A%2F%2Fjovian.ml%2Fapi%2Fgit%2F.*
       BinderHub:
-        build_image: jupyter/repo2docker:2021.01.0-46.g7430cba
+        build_image: jupyter/repo2docker:2021.03.0
         build_node_selector:
           user: worker
         per_repo_quota: 100
