--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,9 @@ deploy_staging:
       URL+="@github.com/gesiscss/orc"
       git push $URL $CI_COMMIT_SHA:staging
 
+      echo "#### Just some test"
+      fab -H $K8S_STAGING_MASTER_NODE_IP test -u ladmin -p $STAGING_MASTER_NODE_PASSWORD
+
       echo "####### Running staging deploy"
       mode="fetch_co"
       #pip3 install fabric==2.4.*
