--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n535.h5c6afe8
+   version: 0.2.0-n554.h4b41dc2
    repository: https://jupyterhub.github.io/helm-chart
