--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n554.h4b41dc2
+   version: 0.2.0-n555.heb692c5
    repository: https://jupyterhub.github.io/helm-chart
