use dind for bhub

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -171,7 +171,17 @@ binderhub:
     allowOrigin: '*'
 
   dind:
-    enabled: false
+    enabled: true
+    resources:
+      requests:
+        cpu: "0.5"
+        memory: 1Gi
+      limits:
+        cpu: "8"
+        memory: 8Gi
+    # change this to /ssd/docker?
+    hostLibDir: /var/lib/dind/bhub
+    hostSocketDir: /var/run/dind/bhub
 
   imageCleaner:
     enabled: false
