--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -100,7 +100,17 @@ persistent_binderhub:
       allowOrigin: '*'
 
     dind:
-      enabled: false
+      enabled: true
+      resources:
+        requests:
+          cpu: "0.5"
+          memory: 1Gi
+        limits:
+          cpu: "8"
+          memory: 8Gi
+      # change this to /ssd/docker?
+      hostLibDir: /var/lib/dind/bhub
+      hostSocketDir: /var/run/dind/bhub
 
     imageCleaner:
       enabled: false
