create a variable for changed files?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@
 # https://gitlab.com/gitlab-org/gitlab-foss/-/issues/45173#note_291163703
 variables:
   STAGING_MASTER_NODE_PASSWORD: $K8S_STAGING_MASTER_NODE_PASSWORD
+  CHANGED_FILES: git diff --name-only $CI_COMMIT_BEFORE_SHA $CI_COMMIT_SHA
 
 stages:
 #  - test
@@ -41,7 +42,8 @@ build_job:
       echo $CI_COMMIT_SHA
       echo $CI_COMMIT_BEFORE_SHA
       git diff --name-only $CI_COMMIT_BEFORE_SHA $CI_COMMIT_SHA
-
+      echo $CHANGED_FILES
+      
       echo "####### Running build"
       echo "####### Building docker images on master node"
       #CI_COMMIT_SHA_8=${CI_COMMIT_SHA:0:8}
