--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,10 @@ build_job:
       echo $CI_COMMIT_BEFORE_SHA
       CHANGED_FILES="git diff --name-only $CI_COMMIT_BEFORE_SHA $CI_COMMIT_SHA"
       echo $CHANGED_FILES
+      if $CHANGED_FILES | egrep '.gitlab-ci.yml'; then
+        echo "works"
+      fi;
+      
       echo "####### Running build"
       echo "####### Building docker images on master node"
       #CI_COMMIT_SHA_8=${CI_COMMIT_SHA:0:8}
