--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n562.h0b4462c
+   version: 0.2.0-n557.h46ddaac
    repository: https://jupyterhub.github.io/helm-chart
