--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n563.h72d30fb
+   version: 0.2.0-n571.hc0efe13
    repository: https://jupyterhub.github.io/helm-chart
