Don't try to restart bot upgrade pod if it fails

--- a/gesisbinder/bot/cron_job.yaml
+++ b/gesisbinder/bot/cron_job.yaml
@@ -14,7 +14,7 @@ spec:
         metadata:
           name: update-gesisbinder
         spec:
-          restartPolicy: OnFailure
+          restartPolicy: Never
           containers:
           - name: update-gesisbinder
             image: python:3.7.4-stretch
