--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n575.h2dc091f
+   version: 0.2.0-n577.h14cc6c7
    repository: https://jupyterhub.github.io/helm-chart
