--- a/gesisbinder/bot/cron_job.yaml
+++ b/gesisbinder/bot/cron_job.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: update-gesisbinder
 spec:
-  schedule: "0 0 1 1 *"
+  schedule: "*/5 * * * *"
   # Setting a limit to 0 corresponds to keeping none of the corresponding kind of jobs after they finish.
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 10
