--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n609.h195837f
+   version: 0.2.0-n611.he777436
    repository: https://jupyterhub.github.io/helm-chart
