repo2docker: https://github.com/jupyterhub/repo2docker/compare/df65135...43891a6

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -58,7 +58,7 @@ binderhub:
       pod_quota: 50
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:2021.03.0-68.gdf65135
+      build_image: jupyter/repo2docker:2021.03.0-70.g43891a6
       build_node_selector:
         user: worker
         # userbinder: worker
