--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n641.h73c6ebd
+   version: 0.2.0-n645.h06139f0
    repository: https://jupyterhub.github.io/helm-chart
