--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n652.h034430a
+   version: 0.2.0-n653.h195caac
    repository: https://jupyterhub.github.io/helm-chart
