repo2docker: https://github.com/jupyterhub/repo2docker/compare/43891a6...6e2a6af

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -60,7 +60,7 @@ binderhub:
       pod_quota: 40
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:2021.03.0-70.g43891a6
+      build_image: jupyter/repo2docker:2021.08.0-2.g6e2a6af
       build_node_selector:
         user: worker
         # userbinder: worker
