--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -49,6 +49,7 @@ persistent_binderhub:
           - ^https%3A%2F%2Fjovian.ml%2Fapi%2Fgit%2F.*
           - ^(git|https?)%3A%2F%2Fnotabug.org%2FulslcuRux3Y%2F.*
           - ^https%3A%2F%2Fframagit.org%2FCecGhesq%2Flic_mdf_nsi_1.*
+          - ^(git|https?)%3A%2F%2Fcodeberg.org%2Fforgiagether%2F.*
 
       BinderHub:
         build_image: quay.io/jupyterhub/repo2docker:2021.08.0-2.g6e2a6af
