--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n661.h8269b12
+   version: 0.2.0-n671.hbe94c46
    repository: https://jupyterhub.github.io/helm-chart
