--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n735.h372efd3
+   version: 0.2.0-n746.h051f302
    repository: https://jupyterhub.github.io/helm-chart
