test out TakeoutData handler

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -211,10 +211,11 @@ persistent_binderhub:
         extraConfig:
           10-project-api: |
             from persistent_bhub_config import ProjectAPIHandler
-            from extra_config import OrcAdminHandler, ORC_LOGIN_COOKIE_NAME
+            from extra_config import OrcAdminHandler, ORC_LOGIN_COOKIE_NAME, TakeoutData
 
             from jupyterhub.handlers import Template404
             c.JupyterHub.extra_handlers = [(r'/admin_orc', OrcAdminHandler),
+                                            (r'/takeout', TakeoutData)
                                           (r'/api/projects/([^/]+)', ProjectAPIHandler),
                                           # return 404 for /hub/(about|faq|terms_of_use)/
                                           # /(about|faq|terms_of_use)/ pages are served in custom PrefixRedirectHandler
