--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-n774.hde3f15d
+   version: 0.2.0-n791.hc539a31
    repository: https://jupyterhub.github.io/helm-chart
