--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -179,9 +179,9 @@ persistent_binderhub:
           - name: hub-extra-config-json
             configMap:
               name: hub-extra-config-json
-          - name: hub-extra-user-id
+          - name: hub-extra-users
             configMap:
-              name: hub-extra-user-id
+              name: hub-extra-users
         extraVolumeMounts:
           # the first 3 are taken from persistent_binderhub chart, because extraVolumes is a list
           - name: persistent-bhub-templates
@@ -204,9 +204,10 @@ persistent_binderhub:
           - mountPath: /usr/local/etc/jupyterhub/extra_config.json  # mount where jupyterhub_config.py is, we import it there.
             subPath: extra_config.json
             name: hub-extra-config-json
+
           - mountPath: /usr/local/etc/jupyterhub/user_id.py
             subPath: user_id.py
-            name: hub-extra-user-id
+            name: hub-extra-users
 
         templatePaths:
           - "/etc/jupyterhub/orc_templates"
