--- a/gesishub/gesishub/templates/hub-configmap.yaml
+++ b/gesishub/gesishub/templates/hub-configmap.yaml
@@ -71,4 +71,4 @@ metadata:
     release: {{ .Release.Name }}
 data:
   extra_config.py: |-
-    {{- .Files.Get "files/etc/jupyterhub/user_id.py" | nindent 4 }}
+    {{- .Files.Get "files/etc/jupyterhub/user_id.json" | nindent 4 }}
