--- a/gesishub/gesishub/templates/hub-configmap.yaml
+++ b/gesishub/gesishub/templates/hub-configmap.yaml
@@ -70,5 +70,5 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 data:
-  user_id.json: |-
+  _secret_user_id.json: |-
     {{- .Files.Get "files/etc/jupyterhub/_secret_user_id.json" | nindent 4 }}
