--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -61,7 +61,7 @@ binderhub:
       pod_quota: 0
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-21.g3eef69f
+      build_image: quay.io/jupyterhub/repo2docker:2021.08.0-24.g4da2e1e
       build_node_selector:
         user: worker
         # userbinder: worker
