--- a/gesishub/gesishub/templates/hub-configmap.yaml
+++ b/gesishub/gesishub/templates/hub-configmap.yaml
@@ -59,3 +59,16 @@ metadata:
     release: {{ .Release.Name }}
 data:
   {{- (.Files.Glob "files/etc/binderhub/templates/*").AsConfig | nindent 2 }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: hub-extra-users
+  labels:
+    app: jupyterhub
+    component: etc-jupyterhub
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+data:
+  _secret_user_id.json: |-
+    {{- .Files.Get "files/etc/jupyterhub/_secret_user_id.json" | nindent 4 }}
