change takeout pod node to backup node

--- a/takeout/config.yaml
+++ b/takeout/config.yaml
@@ -35,7 +35,7 @@ spec:
         app: takeout
     spec:
       nodeSelector:
-        base: worker  # where database is
+        user: worker  # where backup is
       containers:
       - name: takeout
         image: gesiscss/binder-takeout:latest
